# coronascraper

./: Pipfile  README.md  pyproject.toml
coronascraper/: scraper.py
tests/: test_coronascraper.py
