[tool.poetry]
name = "coronascraper"
version = "0.1.0"
description = ""
authors = ["atharva <atharvakadlag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.0"
requests = "^2.23.0"
pyqt5 = "^5.14.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
